--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -30,6 +30,10 @@
                                     <constraint firstAttribute="height" constant="460" id="d1F-0F-lci"/>
                                 </constraints>
                             </tableView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="カテゴリーで検索" translatesAutoresizingMaskIntoConstraints="NO" id="SRx-gi-G2p">
+                                <rect key="frame" x="26" y="524" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -130,6 +134,17 @@
                                     <!--2016-02-29 06:18:01 +0000-->
                                 </date>
                             </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbI-Rl-G0e">
+                                <rect key="frame" x="16" y="438" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dc8-kH-Vm7">
+                                <rect key="frame" x="16" y="472" width="288" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -138,10 +153,15 @@
                             <constraint firstItem="y6P-ey-LdM" firstAttribute="top" secondItem="rmR-62-D4j" secondAttribute="bottom" constant="10" id="55N-cX-rR7"/>
                             <constraint firstItem="KuI-Bh-aga" firstAttribute="top" secondItem="CNp-vt-xlz" secondAttribute="bottom" constant="10" id="7uH-Kx-PmE"/>
                             <constraint firstItem="y6P-ey-LdM" firstAttribute="trailing" secondItem="L6q-dI-Zo0" secondAttribute="trailingMargin" id="8ea-1f-jUa"/>
+                            <constraint firstItem="FbI-Rl-G0e" firstAttribute="top" secondItem="KuI-Bh-aga" secondAttribute="bottom" constant="17" id="DZZ-47-6aT"/>
+                            <constraint firstItem="FbI-Rl-G0e" firstAttribute="leading" secondItem="L6q-dI-Zo0" secondAttribute="leadingMargin" id="JBN-DD-tv7"/>
                             <constraint firstItem="y6P-ey-LdM" firstAttribute="leading" secondItem="L6q-dI-Zo0" secondAttribute="leadingMargin" id="KA9-o5-HE8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="KuI-Bh-aga" secondAttribute="trailing" id="LoJ-Ie-WRJ"/>
                             <constraint firstItem="rmR-62-D4j" firstAttribute="leading" secondItem="L6q-dI-Zo0" secondAttribute="leadingMargin" id="Ov6-Sy-c1U"/>
+                            <constraint firstItem="Dc8-kH-Vm7" firstAttribute="leading" secondItem="L6q-dI-Zo0" secondAttribute="leadingMargin" id="Sju-ln-DZN"/>
+                            <constraint firstItem="Dc8-kH-Vm7" firstAttribute="top" secondItem="FbI-Rl-G0e" secondAttribute="bottom" constant="13" id="YVg-Kb-zRz"/>
                             <constraint firstItem="KuI-Bh-aga" firstAttribute="leading" secondItem="L6q-dI-Zo0" secondAttribute="leadingMargin" id="dmx-uQ-y5g"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Dc8-kH-Vm7" secondAttribute="trailing" id="h5F-HD-VCd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="CNp-vt-xlz" secondAttribute="trailing" id="rUU-Cp-Qzj"/>
                             <constraint firstItem="CNp-vt-xlz" firstAttribute="top" secondItem="CCW-Ka-f3v" secondAttribute="bottom" id="v2B-dC-axn"/>
                             <constraint firstItem="CNp-vt-xlz" firstAttribute="leading" secondItem="L6q-dI-Zo0" secondAttribute="leadingMargin" id="wjb-mL-7wV"/>
